--- a/src/styles.css
+++ b/src/styles.css
@@ -61,9 +61,11 @@ body {
 }
 
 #content-title {
-  font-size: 1.4rem;
+  font-family: 'Fleur De Leah', cursive;
+  font-size: 2.2rem;
+  line-height: 1;
   margin: 0 0 16px 0;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 #tree-container {
@@ -186,7 +188,7 @@ body {
   }
 
   #content-title {
-    font-size: 1.2rem;
+    font-size: 2rem;
     margin-bottom: 12px;
   }
 
